--- a/.github/workflows/gemini-pr-review.yml
+++ b/.github/workflows/gemini-pr-review.yml
@@ -1,25 +1,26 @@
 name: '🧐 Gemini Pull Request Review'
 
-on:
-  pull_request:
-    types:
-      - 'opened'
-      - 'reopened'
-  issue_comment:
-    types:
-      - 'created'
-  pull_request_review_comment:
-    types:
-      - 'created'
-  pull_request_review:
-    types:
-      - 'submitted'
-  workflow_dispatch:
-    inputs:
-      pr_number:
-        description: 'PR number to review'
-        required: true
-        type: 'number'
+# Disabled - only smoke tests and staging workflows are active
+# on:
+#   pull_request:
+#     types:
+#       - 'opened'
+#       - 'reopened'
+#   issue_comment:
+#     types:
+#       - 'created'
+#   pull_request_review_comment:
+#     types:
+#       - 'created'
+#   pull_request_review:
+#     types:
+#       - 'submitted'
+#   workflow_dispatch:
+#     inputs:
+#       pr_number:
+#         description: 'PR number to review'
+#         required: true
+#         type: 'number'
 
 concurrency:
   group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
