--- a/.github/workflows/gemini-issue-automated-triage.yml
+++ b/.github/workflows/gemini-issue-automated-triage.yml
@@ -1,19 +1,20 @@
 name: '🏷️ Gemini Automated Issue Triage'
 
-on:
-  issues:
-    types:
-      - 'opened'
-      - 'reopened'
-  issue_comment:
-    types:
-      - 'created'
-  workflow_dispatch:
-    inputs:
-      issue_number:
-        description: 'issue number to triage'
-        required: true
-        type: 'number'
+# Disabled - only smoke tests and staging workflows are active
+# on:
+#   issues:
+#     types:
+#       - 'opened'
+#       - 'reopened'
+#   issue_comment:
+#     types:
+#       - 'created'
+#   workflow_dispatch:
+#     inputs:
+#       issue_number:
+#         description: 'issue number to triage'
+#         required: true
+#         type: 'number'
 
 concurrency:
   group: '${{ github.workflow }}-${{ github.event.issue.number }}'
