--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -1,33 +1,34 @@
 name: Test Suite
 description: Comprehensive test execution workflow
 
-on:
-  pull_request:
-    paths:
-      - '**.py'
-      - '**.ts'
-      - '**.tsx'
-      - 'requirements.txt'
-      - 'package.json'
-  
-  workflow_dispatch:
-    inputs:
-      test_level:
-        description: 'Test level to run'
-        required: false
-        type: choice
-        default: 'smoke'
-        options:
-          - smoke
-          - unit
-          - integration
-          - comprehensive
-          - comprehensive-backend
-          - comprehensive-frontend
-          - comprehensive-core
-          - comprehensive-agents
-          - comprehensive-websocket
-          - comprehensive-database
+# Disabled - only smoke tests and staging workflows are active
+# on:
+#   pull_request:
+#     paths:
+#       - '**.py'
+#       - '**.ts'
+#       - '**.tsx'
+#       - 'requirements.txt'
+#       - 'package.json'
+#   
+#   workflow_dispatch:
+#     inputs:
+#       test_level:
+#         description: 'Test level to run'
+#         required: false
+#         type: choice
+#         default: 'smoke'
+#         options:
+#           - smoke
+#           - unit
+#           - integration
+#           - comprehensive
+#           - comprehensive-backend
+#           - comprehensive-frontend
+#           - comprehensive-core
+#           - comprehensive-agents
+#           - comprehensive-websocket
+#           - comprehensive-database
           - comprehensive-api
           - critical
       triggered_by:
